setup build archive

--- a/src/snippets/skeleton.html
+++ b/src/snippets/skeleton.html
@@ -15,13 +15,13 @@
 		</div>
 		<div class="header-links-container">
 			<a href="about.html">About</a>
-			<a href="all-projects.html">Projects</a>
+			<a href="archive.html">Archive</a>
 		</div>
 	</header>
 	<main>
 	</main>
 	<footer>
-		<p>© 2020 Joshua Keating.</p>
+		<p>© 2016-2020 Joshua Keating.</p>
 	</footer>
 </body>
 
